my-assignment/loan-validator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loan-validator-portal
  labels:
    name: loan-validator-portal
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
